style: Fix removed toggle button hover blue on small deavices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -626,6 +626,10 @@ button[type="submit"]:hover {
         margin-left: 0;
     }
 
+    .nav-toggle button:hover {
+        background: #45596c;
+    }
+
     .nav-toggle {
         margin-top: 10px;
         margin-left: 10px;
